src/objects/Travel_Record__c.object
<CustomObject>
    <description>Arrival and departure information for event attendee.</description>
    <fields>
        <fullName>Airport_Pickup_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the event attendee needs to be picked up at the airport.</description>
        <inlineHelpText>Check this box if you need transportation to and from the airport.</inlineHelpText>
        <label>Airport Pickup Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Arrival_Airline__c</fullName>
        <label>Arrival Airline</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Airport__c</fullName>
        <inlineHelpText>Use three-character airport code whenever possible.</inlineHelpText>
        <label>Arrival Airport</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Date_Time__c</fullName>
        <label>Arrival Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Arrival_Flight_Number__c</fullName>
        <label>Arrival Flight Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure_Airline__c</fullName>
        <label>Departure Airline</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure_Airport__c</fullName>
        <inlineHelpText>Use three-digit airport code whenever possible.</inlineHelpText>
        <label>Departure Airport</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure_Date_Time__c</fullName>
        <label>Departure Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Departure_Drop_off_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is drop-off at airport required on departure date?</inlineHelpText>
        <label>Departure Drop-off Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Departure_Flight_Number__c</fullName>
        <label>Departure Flight Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Which opportunity is the travel record related to?</description>
        <inlineHelpText>The opportunity that this travel record is related to.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Travel Records</relationshipLabel>
        <relationshipName>Travel_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Transport_Method__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if student is not arriving by air.</inlineHelpText>
        <label>Other Transport. Method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passport_Number__c</fullName>
        <description>The student&apos;s passport number</description>
        <inlineHelpText>The student&apos;s passport number</inlineHelpText>
        <label>Passport Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visa__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the student require a visa?</description>
        <inlineHelpText>Does the student require a visa?</inlineHelpText>
        <label>Visa Required?</label>
        <type>Checkbox</type>
    </fields>
    <label>Travel Record</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Travel Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>